# partial_derive2

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
make_option/: Cargo.toml
make_option/src/: lib.rs
src/: lib.rs
tests/: tests.rs
