[package]
name = "make_option"
description = "turns any type into an option, only if it is not already one"
documentation = "https://docs.rs/make_option"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
